<resources>
    <string name="app_name">TrigApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_login">Welcome</string>

    <string name="infoTxtViewLogin">Enter your account details to get started.</string>


    <string name="MobEmailTxtViewReg">UserName</string>
    <string name="Password">Password</string>
    <string name="MobileNoHintRegOnLogin">Enter Password</string>
    <string name="UserNameHintRegOnLogin">Enter UserName</string>
    <string name="EmailIdHintRegOnLogin">Enter valid email id</string>
    <string name="error_mobilenumber_emailid_empty">Number or Email address cannot be empty</string>
    <string name="error_invalid_username">Please enter a valid username.</string>
    <string name="error_invalid_password">Please enter a valid password.</string>
    <string name="error_invalid_username_password">Please enter a valid username and password.</string>
    <string name="answer_all_questions">Answer all questions to Submit</string>
    <string name="error_empty_field"> cannot be empty.</string>
    <string name="error_mobilenumberZero">"Mobile number cannot begin with a '0'."</string>
    <string name="error_invalid_email">Please enter valid email address</string>
    <string name="changeNumber"><u>Change Mobile No</u></string>
    <string name="text_number_messsage">You will receive One Time Password(OTP) on the registered mobile no: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleOTP">"Didn't receive OTP?"</string>
    <string name="buttonmobileOTP"><u>Resend</u></string>
    <string name="otpSent">OTP is successfully sent.</string>
    <string name="otpLimitExceed">"You have exceeded maximum login attempts. Session expired, Try logging in again."</string>
    <string name="exitConfirmation">This will exit the app. Do you want to continue?</string>
    <string name="no_internet_message">Unable to connect. Please check your internet connection.</string>


    <string name="question">Question</string>
    <string name="play_again">Play again</string>
    <string name="time">15</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Opps the answer was wrong</string>
    <string name="timeup">Time Up</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="cancel">✖</string>

    //Feedback
    <string name="feedbackIntro">Send \nUs Your \nFeedback</string>
    <string name="feedbackIntro2">Feedback Form</string>


    //Buttons
    <string name="continueBtnLogin">Continue</string>
    <string name="submit">Submit</string>


    // Assessment


    <!--Enter Your Name Field-->
    <string name="enter_your_name">Enter Your Name</string>

    <!--Question 1-->
    <string name="num_question_1">Question 1</string>
    <string name="question_1">Which of the following are the primary goals of network security? (Choose 3 best answers)</string>

    <!--Answers to the question 1-->
    <string name="redundancy">Redundancy</string>
    <string name="availability">Availability</string>
    <string name="integrity">Integrity</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="remote_access">Remote access</string>

    <!--Question 2-->
    <string name="num_question_2">Question 2</string>
    <string name="question_2">Which of the following statements best describes confidentiality of information?</string>

    <!--Answers to the question 2-->
    <string name="answer_2_1">Refers to keeping the data private and preventing unauthorized access</string>
    <string name="answer_2_2">Refers to making the data available any time that a client wants to access</string>
    <string name="answer_2_3">Refers to keeping the data secure from being modified in storage or transmit</string>
    <string name="answer_2_4">Refers to making the data private, secure and available</string>

    <!--Question 3-->
    <string name="num_question_3">Question 3</string>
    <string name="question_3">According to Cisco, organizational data is classified into four categories. Which of the following is NOT classification category?</string>

    <!--Answers to the question 3-->
    <string name="publ">Public</string>
    <string name="sensitive">Sensitive</string>
    <string name="confidential">Confidential</string>
    <string name="_private">Private</string>
    <string name="trusty_worthy">Trusty worthy</string>

    <!--Question 4-->
    <string name="question_4">What are the THREE security solution that Cisco recommends for comprehensive security?</string>
    <string name="num_question_4">Question 4</string>

    <!--Answers to the question 4-->
    <string name="managerial">Managerial</string>
    <string name="physical">Physical</string>
    <string name="logical">Logical</string>
    <string name="administrative">Administrative</string>
    <string name="geographical">Geographical</string>

    <!--Question 5-->
    <string name="num_question_5">Question 5</string>
    <string name="question_5">Which of the following is true about Dynamic ARP Inspection (DAI) employed in a network switch? (Choose 3 best answers)</string>

    <!--Answers to the question 5-->
    <string name="answer_5_1">Intercept and examine all ARP request and response packets in a subnet and discard packets with invalid IP-to-MAC address bindings</string>
    <string name="answer_5_2">Prevents STP attacks</string>
    <string name="answer_5_3">DAI can prevent common man-in-the-middle (MIM) attacks such as ARP cache poisoning</string>
    <string name="answer_5_4">Prevents mis-configuration of client IP addresses</string>
    <string name="answer_5_5">Prevents CAM table overflows</string>

    <!--Question 6-->
    <string name="num_question_6">Question 6</string>
    <string name="question_6">Which one of the following types of attack intentionally introduced a back door to a system?</string>

    <!--Answers to the question 6-->
    <string name="passive_attack">Passive attack</string>
    <string name="active_attack">Active attack</string>
    <string name="close_in_attack">Close-in attack</string>
    <string name="insider_attack">Insider attack</string>
    <string name="distribution_attack">Distribution attack</string>

    <!--Question 7-->
    <string name="num_question_7">Question 7</string>
    <string name="Question_7">An organization screens its employees for any previous criminal records, as part of implementation of organizational security. It may be categorized as:</string>

    <!--Answers to the question 7-->
    <string name="physical_security">Physical security</string>
    <string name="administrative_security">Administrative security</string>
    <string name="logical_security">Logical security</string>
    <string name="vulnerability">Vulnerability</string>

    <!--Question 8-->
    <string name="num_question_8">Question 8</string>
    <string name="question_8">Which three of the following are the Confidentiality attack strategies? (Choose 3 best answers)</string>

    <!--Answers to the question 8-->
    <string name="packet_capture">Packet capture</string>
    <string name="password_attack">Password attack</string>
    <string name="dumpster_driving">Dumpster driving</string>
    <string name="botnet">Botnet</string>
    <string name="social_engineering">Social engineering</string>
    <string name="tcpsyn_flood">TCPSYN Flood</string>

    <!--Question 9-->
    <string name="num_question_9">Question 9</string>
    <string name="question_9">Which of the following are the Integrity attacks? (Choose 3 best answers)</string>

    <!--Answers to the question 9-->
    <string name="data_diddling">Data diddling</string>
    <!--Rest of the answers to question 9 to watch in the answer to question 8 above-->

    <!--Question 10-->
    <string name="num_question_10">Question 10</string>
    <string name="question_10">Which of the following are the attacks on availability of a resource? (Choose 2 best answers)</string>

    <!--Answers to the question 9-->
    <string name="denial_of_service">Denial of Service</string>
    <!--Rest of the answers to question 10 to watch in the answer to question 8 above-->

    <!--Button "End Test"-->
    <string name="end_test">End test</string>

    <!--Test Result-->
    <string name="test_result_name">"Name: "</string>
    <string name="test_result">Test Result</string>
    <string name="test_result_score">"Score: "</string>

    <string name="lets_started">Let\'s Start</string>

    <string name="readMore">Read More</string>
    <string name="readLess">Read Less</string>
    <string name="share">Share</string>
    <string name="appExit">Are you sure you want to Exit?</string>
    <string name="appLogout">Are you sure you want to Logout?</string>
    <string name="DialogHeading">Notification</string>
    <string name="logoutHeading">Logout</string>
    <string name="exitHeading">Notification</string>
    <string name="close_image_desc">Close</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="employeeCode">Employee Code</string>
    <string name="designation">Designation</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="dob">Date of birth</string>
    <string name="age">Age</string>
    <string name="doJoining">Date of joining</string>
    <string name="feedback">Feedback</string>
    <string name="suggestionHint">Suggestion/Remarks</string>
    <string name="suggestionByHint">Suggestion By</string>
    <string name="FeedbackOn">Feedback On</string>
    <string name="enter_feedbackon">Enter FeedbackOn</string>
    <string name="enter_designation">Enter your Name and Designation</string>
    <string name="branch_address">Regd. Off.: Off. No. D/3-6, Ground Floor, Sitaladevi CHSL, Opp. Indian Oil Nagar, D.N. Nagar, Andheri (West), Mumbai – 400 053. (INDIA).</string>
    <string name="admin_address">Regd. Off.: Off. No. D/3-6, Ground Floor, Sitaladevi CHSL, Opp. Indian Oil Nagar, D.N. Nagar, Andheri (West), Mumbai – 400 053. (INDIA).</string>
    <string name="email_address">info@triggroup.in</string>
    <string name="contact_number">+(91)-22-66783333</string>
    <string name="branch_heading">Branch Address</string>
    <string name="contact_trainer_heading">Contact Trainer</string>
    <string name="administrative_heading">Administrative Address</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="full_name">Full Name</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_unit">Select Unit</string>
    <string name="server_error">Things are little unstable here \nCome back later</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
