<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <View
        android:id="@+id/view"
        style="@style/Line" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/headerTxt"
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_2" />

        <TextView
            android:id="@+id/QuestionText"
            style="@style/QuestionText"
            android:text="@string/question_2" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/option_one"
                android:visibility="gone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:src="@drawable/ic_close" />

            <RadioButton
                android:id="@+id/answer_1_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_1" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/option_two"
                android:visibility="gone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:src="@drawable/ic_close" />

            <RadioButton
                android:id="@+id/answer_2_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_2" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/option_three"
                android:visibility="gone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:src="@drawable/ic_close" />

            <RadioButton
                android:id="@+id/answer_3_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_3" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/option_four"
                android:visibility="gone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:src="@drawable/ic_close" />

            <RadioButton
                android:id="@+id/answer_4_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_4" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RadioGroup>

</LinearLayout>
