<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:src="@drawable/ic_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginLeft="@dimen/_20sdp" />

    <TextView
        android:id="@+id/welcome_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/feedbackIntro"
        android:textColor="@color/black"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp" />

    <TextView
        android:id="@+id/number_message"
        style="@style/Login_infoTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/feedbackIntro2"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_login"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login" />


    <!--<EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_bg"
        android:hint="Enter Feedback Here (Max 100)"
        android:minLines="3"
        android:maxLines="3"
        android:inputType="text"
        android:paddingStart="10dp"
        android:gravity="start"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_login"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/number_message" />-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:background="@drawable/feedback_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="start"
        android:padding="@dimen/_4sdp"
        android:maxLength="200"
        android:hint="Here you can write your feedback"
        android:minLines="4"
        android:maxLines="3"
        android:textColor="@color/broadanalyticsHeaderMsg"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_login"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/number_message" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/feedback_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="start"
        android:hint="Here you can write your Suggestion/Remarks"
        android:maxLength="200"
        android:maxLines="3"
        android:minLines="4"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/broadanalyticsHeaderMsg"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/btn_login"
        android:background="@drawable/selector_login_button_blue_rounded_corner"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestion" />


</androidx.constraintlayout.widget.ConstraintLayout>